--- a/05-first-react-project/package.json
+++ b/05-first-react-project/package.json
@@ -37,6 +37,7 @@
   },
   "devDependencies": {
     "@types/react-router-dom": "^5.1.5",
+    "@types/styled-components": "^5.1.1",
     "@typescript-eslint/eslint-plugin": "^3.6.1",
     "@typescript-eslint/parser": "^3.6.1",
     "eslint": "6.8.0",
